# patchright-difz-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
patchright_difz/: __init__.py  _cloudflare_data.py  _turnstile_options.py  async_api.py  headless.py  main_world.py  sync_api.py  turnstile_async.py  turnstile_sync.py
scripts/: publish.py
