[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "patchright-difz"
version = "0.4.1"
description = "Patchright Python wrapper with optional Turnstile auto-click helper."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Difz" }]
keywords = ["patchright", "turnstile", "cloudflare", "browser-automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["patchright>=1.58.2"]

[project.urls]
Homepage = "https://github.com/Difz25x/patchright-difz-python"
Repository = "https://github.com/Difz25x/patchright-difz-python"
Issues = "https://github.com/Difz25x/patchright-difz-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["patchright_difz"]
